--- a/libft/Makefile
+++ b/libft/Makefile
@@ -73,6 +73,7 @@ SRC = ft_memset.c \
       ft_lstaddend.c \
       ft_lstiter.c \
       ft_lstmap.c \
+      ft_sqrt.c \
       t_buff.c
 OBJ = $(SRC:.c=.o)
 
