--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(a.out
         src/reader.c
         src/draw.c
         src/plane_iter.c
+        src/tetra_prepare.c
 
         libft/ft_memset.c
         libft/ft_bzero.c
