--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,5 +76,6 @@ add_executable(a.out
         libft/ft_swap.c
         libft/get_next_line.c
 
+        libft/ft_realloc.c
         libft/t_buff.c
         libft/ft_sqrt.c)
